[ORG-39] added department
